Corrects overflow issue on the cards.

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ main {
 
 .card {
   margin: 25px 0;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .image {
@@ -52,17 +52,64 @@ main {
   box-sizing: border-box;
 }
 
+.recipe h2 {
+  color: #F16059;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 24px;
+  font-weight: bold;
+  text-transform: uppercase;
+  line-height: 29px;
+  margin-top: 0;
+}
+
+.time {
+  margin-bottom: 20px;
+  border: 1px solid #3B3B3B;
+  overflow: hidden;
+}
+
+.time div {
+  float: left;
+  padding-left: 6px;
+  width: 33.3333%;
+  box-sizing: border-box;
+  text-transform: uppercase;
+}
+
+.time strong {
+  font-family: 'Montserrat', sans-serif;
+}
+
+.time .cook {
+  border-width: 0 1px;
+  border-style: solid;
+  border-color: #3B3B3B;
+
+}
+
+.time img {
+  width: 15px;
+  height: auto;
+  margin-right: 5px;
+  vertical-align: middle;
+}
+
+.time-details {
+  display: inline;
+}
+
+
 #cookies {
   background-image: url("../img/gluten-free-sugar-cookies.jpg");
-  background-size: cover;
+  background-size: contain;
 }
 
 #pesto {
   background-image: url("../img/nut-free-pesto.jpg");
-  background-size: cover;
+  background-size: contain;
 }
 
 #salad {
   background-image: url("../img/watermelon-salad.jpg");
-  background-size: cover;
+  background-size: contain;
 }
